[package]
name = "connex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
scraper = "0.18"
crossterm = "0.27"
tui = "0.19"
url = "2.5"
